k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storefront-shubham-agrawal-classes
