k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-shubham-agrawal-classes
  namespace: storefront-shubham-agrawal-classes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefront-shubham-agrawal-classes
  template:
    metadata:
      labels:
        app: storefront-shubham-agrawal-classes
    spec:
      imagePullSecrets:
        - name: grepvideos-cloud
      containers:
        - name: app
          image: registry.digitalocean.com/grepvideos-server/storefront-shubham-agrawal-classes:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
