k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-shubham-agrawal-classes
  namespace: storefront-shubham-agrawal-classes
spec:
  type: ClusterIP
  selector:
    app: storefront-shubham-agrawal-classes
  ports:
    - name: http
      port: 80
      targetPort: 8080
